<resources>
    <string name="app_name">Generosity</string>
    <string name="tab_map">Map</string>
    <string name="tab_list">List</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_settings">Settings</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
...
